# leetcode-solutions

./: pyproject.toml
array/: 1470_Shuffle_the_Array.py  1920_build_array_from_permutation.py  1929_Concatenation_of_Array.py  26_Remove_Duplicates_from_Sorted_Array.py  2798_Number_of_Employees_Who_Met_the_Target.py  561_Array_Partition.py
database/: bank-account-summary-ii.sql  daily-leads-and-partners.sql  find-total-time-spent-by-each-employee.sql  number-of-unique-subjects-taught-by-each-teacher.sql  rearrange-products-table.sql  replace-employee-id-with-the-unique-identifier.sql  swap-salary.sql
hashtable/: 1636_Sort_Array_by_Increasing_Frequency.py
